--- a/index.html
+++ b/index.html
@@ -209,139 +209,139 @@
                     {
                         designBuildServices: {
                             title: "Design Build Services",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: [" Our team and industry partners are available to help building owners, end users, consulting engineers and contractors develop projects from the ground up. Whether the need is budget planning, consulting, or contracting, Storer Services' goal is to be your trusted advisor for any project."],
                             showSubItems: false,
                             image: "select"
                         },
                         buildingAutomation: {
                             title: "Building Automation System (BAS)",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["  Direct Digital Controls (DDC) allows you to leverage technology to maximize the operating efficiency of your building. We install interoperable, energy-efficient design backed by the best support and maintenance team in the market."],
                             showSubItems: false,
                             image: "controls"
                         },
                         centralPlant: {
                             title: "Central Plant",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: [" The Central Utility Plant is the heart of your HVAC system. For over 50 years Storer has served as the industry expert in central plant retrofits, replacements, maintenance, and operation.  "],
                             showSubItems: false,
                             image: "chiller"
                         },
                         chillerRetrofit: {
                             title: "Chiller Retrofit",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: [" Every chiller plant is unique, which means finding the right chiller for any given situation can be a challenge. Storer will partner with you to select the equipment best suited for your application.   "],
                             showSubItems: false,
                             image: "chiller"
                         },
                         boilerRetrofit: {
                             title: "Boiler Retrofit and/or Replacement",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: [" Regardless of model or type, whether steam or hot water, it is imperative that you trust the maintenance of your boiler to professionals to guarantee it is working effectively, energy-efficiently, and safely."],
                             showSubItems: false,
                             image: "boiler"
                         },
                         buildingIntegration: {
                             title: "Building Intergration",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["A connected and integrated system can help owners and facility managers better manage their buildings. Our experience with integrating existing building automation systems into newly installed components ensures you can control your entire building in one interoperable platform, helping you turn your building system data into usable information.  "],
                             showSubItems: false,
                             image: "controls"
                         },
                         packageRooftop: {
                             title: "Package Rooftop Unit Install",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: [" Storer will work with you to find the right solution for your HVAC needs. We install and service a variety of commercial packaged rooftop units to find the one best suited for your building."],
                             showSubItems: false,
                             image: "crane"
                         },
                         poolRoom: {
                             title: "Pool Room Conditioning)",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: [" The indoor pool room is one of the most complex spaces to condition. A detailed understanding of temperature and humidity control, psychometrics, pool water chemistry, and mechanical refrigeration is necessary to maintain comfort effectively.   "],
                             showSubItems: false,
                             image: "pool"
                         },
                         coolingTower: {
                             title: "Cooling Towers",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["Selecting the right cooling tower is a balance between cost and your long-term needs. Understanding water chemistry, cooling tower design, financial implications, and central plant sequence of control among other factors is critical to ensure you get the best investment return.   "],
                             showSubItems: false,
                             image: "cooling"
                         },
                         uv: {
                             title: "UV Light Install",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["Ultraviolet lights break down organisms that live on cooling coils, deeply cleaning the fins and improving heat transfer.  "],
                             showSubItems: false,
                             image: "uv"
                         },
                         pm: {
                             title: "PM Agreement (with Sub-groups)",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["A Preventive Maintenance Agreement will not only extend the life of your equipment, but also reduce repair costs and unscheduled downtime"],
                             showSubItems: false,
                             image: "select"
                         },
                         centrifugal: {
                             title: "Centrifugal Service (with sub-groups)",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["Centrifugal chillers are some of the most complicated equipment at your faclity. For over 50 years Storer has set the standard in in centrifugal overhauls, extented warranties, purge replacements, and compressor rebuilds."],
                             showSubItems: false,
                             image: "chiller"
                         },
                         selectAgreements: {
                             title: "Select Agreements",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["A Select Agreement will give you a fixed annual price for HVAC maintenance and repairs, allowing you to avoid unplanned budget expenditures."],
                             showSubItems: false,
                             image: "select"
                         },
                         screwCompressor: {
                             title: "Screw Compressor Replacement",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["Helical Rotary Compressors, commonly referred to as Screw Compressors, are inherently reliable and often give years of dependable service. However, failures of screw compressors are oftentimes quick and without warning, resulting in the loss of a large percentage of your cooling capacity and straining your chiller systems."],
                             showSubItems: false,
                             image: "chiller"
                         },
                         boilerServices: {
-                            title: "Boiler Services",
-                            subItems: ["retube", "combustion analyses", "gas piping"],
+                            title: "Boiler Services – (with sub-groups) retube, combustion analyses, gas piping",
+                            subItems: ["Burner upgrades, combustion analysis, retubes, door rebuilds, gas supply issues, steam trap problems and inspections are some of the services we provide to increase effeciency and prolong the life of your boiler. "],
                             showSubItems: false,
                             image: "boiler"
                         },
                         airsideService: {
                             title: "Air Side Service (with sub-groups)",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["Every air handler, whether single or multi-zone, has a different function: Temperature and Humidity Control, Building Pressurization, Ventilation. Proper service requires understanding all of these functions. Our services include, but are not limited to, filter changes, coil replacements, Humidity issues, Low Delta T syndrome, and correction of ventilation and pressurization."],
                             showSubItems: false,
                             image: "airside"
                         },
                         plumbing: {
                             title: "Plumbing",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["Storer Services offers a SOLUTION to all of your Plumbing needs, including: jetter services, backflow preventer inspections, new constriction/ renovation projects and day to day maintenance."],
                             showSubItems: false,
                             image: "plumbing"
                         },
                         emergency: {
                             title: "Emergency Service",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["With over 70 technicians and round-the-clock response, we will respond to your emergency in 2 hours or less."],
                             showSubItems: false,
                             image: "emergency"
                         },
-                        coolingTower: {
+                        coolingTowerCleaning: {
                             title: "Cooling Tower Cleaning & Rebuild",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["Understanding water chemistry, cooling tower design, financial implications, and Central Plant sequence of control, among other factors, is critical to ensure you are getting the best return on your investment. Services we provide include chemical treatment, vibration analysis, belts and gear box inspections, and cleaning among others. "],
                             showSubItems: false,
                             image: "cooling"
                         },
                         pumpRebuilds: {
                             title: "Pump Rebuilds",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["Chiller Systems are the lifeblood of your HVAC system and pumps are the heart. The loss of any pump (chilled water, condenser water, or hot water) has the possibility of shutting down your entire plant or significantly reducing your cooling or heating capability. We do laser alignment and balancing alongside standard service to keep the heart of your HVAC system running."],
                             showSubItems: false,
                             image: "chiller"
                         },
                         onSiteServices: {
                             title: "On-Site Services (SBS)",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["Commercial HVAC systems are complex, and finding skilled, experienced staff can be even more complex. Storer will partner with you to provide the expertise you need. "],
                             showSubItems: false,
                             image: "select"
                         },
                         connectedBuilding: {
                             title: "Connected Building Services",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["Leverage your Building Automation system to reduce operating costs. Using remote access and the latest technology, we can increase building efficiency without straining your budget. "],
                             showSubItems: false,
                             image: "controls"
                         },
                         assetManagement: {
                             title: "Asset Management",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["Mechanical Equipment is an asset that can quickly become a liablity if not managed properly. Contact us to learn more about this program. "],
                             showSubItems: false,
                             image: "asset"
                         },
@@ -353,37 +353,37 @@
                         },
                         asher: {
                             title: "ASHER",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["A powerful, predictive maintainence tool that collects data about your equipment in real time, reduces the cost of prevenative maintenance programs, and anticipates problems before they happen."],
                             showSubItems: false,
                             image: "asher"
                         },
                         safety: {
                             title: "Safety",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["The safety of our team members and our clients is our #1 priority. We are compliant in GRMS, Avetta, ISNet World, BROWZ, and CBRE among others."],
                             showSubItems: false,
                             image: "service"
                         },
                         rentals: {
                             title: "Rentals",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["We offer a complete line of temporary Heating and Cooling equipment to meet your needs, from 1 Ton Spot Cooling up to temporary central cooling and heating plants. Our team is also available to develop contingency plans to minimize the effects of emergencies and have solutions ready before your system fails. "],
                             showSubItems: false,
                             image: "rentals"
                         },
                         parts: {
                             title: "Parts",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["We have over 90 years of HVAC material procurement experience. From Contactors to Compressors,  Actuators to Valves, we are here to provide you the support you need to get up and running quickly."],
                             showSubItems: false,
                             image: "parts"
                         },
                         serviceReports: {
                             title: "Service Reports",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["At the end of every service call you will receive an electronic report about exactly what was done, how much time it took, the materials used, and any recommendations we found. "],
                             showSubItems: false,
                             image: "call"
                         },
                         training: {
                             title: "Training",
-                            subItems: ["Lorem ipsum latin gibberish"],
+                            subItems: ["We work with our clients to deliver training that meets their needs. We offer site specific training, in-house classes focused on a wide range of HVAC topics, multi-day HVAC "bootcamps", or multi-year apprenticeship programs. "],
                             showSubItems: false,
                             image: "service"
                         },
